src/test/resources/mutation/error/serviceAndMutationTypeNotSet/schema.graphqls
type Mutation {
  endrePerson(id: ID!): ID!
}
